--- a/lowdelays.tex
+++ b/lowdelays.tex
@@ -16,5 +16,5 @@ Bundler    &  4.25   &    15.32   \\
 \end{tabular}
 \end{center}
     \vspace{-10pt}
-    \caption{Using CoDel at \name reduces end-to-end packet delays.}\label{t:eval:codel}
+    \caption{Using CoDel reduces end-to-end packet delays.}\label{t:eval:codel}
 \end{table}
